--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dev-server": "webpack-dev-server"
   },
   "dependencies": {
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-env": "1.5.2",
@@ -23,6 +23,7 @@
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
+    "react-router-dom": "4.2.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
