--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
@@ -23,7 +24,9 @@
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
+    "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
+    "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
