--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
+    "uuid": "3.1.0",
     "validator": "8.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
