--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "emailjs-com": "^2.6.3",
+    "firebase": "4.2.0",
     "live-server": "^1.2.1",
     "node-sass": "4.14.1",
     "normalize.css": "7.0.0",
@@ -28,6 +29,7 @@
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
+    "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
