--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
+    "reactjs-popup": "^1.5.0",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
